--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,12 @@
       <a routerLink="/parent-passing-child">Parent passing values to child</a>
     </nav>
     <nav>
+      <a routerLink="/sigle-slot-content">Sigle-slot content</a>
+    </nav>    
+    <nav>
+      <a routerLink="/call-api">Call an API</a>
+    </nav>   
+    <nav>
       <a routerLink="/">Home</a>
     </nav>
   </div>
